# spark-rapids-ml

./: .gitignore  CONTRIBUTING.md  FAQ.md  LICENSE  NOTICE  README.md  README_python.md  README_scala.md  _config.yml  bug.py  compatibility.md  configuration.md  cuspark_kmeans.py  cuspark_pca.py  cuspark_pca_submit.sh  defaultSettings.json  index.md  pom.xml  pyproject.toml  rag-playground-pod.yml  requirements.txt  requirements_dev.txt  run_benchmark.sh  run_test.sh  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-merge.yml  auto-merge.yml-bak  blossom-ci.yml  gcs-benchmark.yml  license-header-check.yml  shell-check.yml  signoff-check.yml  sphinx.yml  update-gh-page.yml
_posts/: 2023-03-10-welcome-to-jekyll.markdown
api/python/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  spark_rapids_ml.common.html  spark_rapids_ml.html
api/python-draft/: genindex.html  index.html  objects.inv  search.html  searchindex.js  spark_rapids_ml.html
benchmark/: README.md  bench_kmeans.py  bench_linear_regression.py  bench_pca.py  benchmark_runner.py  gen_data.py  utils.py
benchmark/benchmark/: base.py  bench_kmeans.py  bench_linear_regression.py  bench_nearest_neighbors.py  bench_pca.py  bench_random_forest.py  utils.py
benchmark/databricks/: README.md  benchmark_utils.sh  cpu_cluster_spec.sh  gpu_cluster_spec.sh  init-cpu.sh  init-pip-cuda-11.8.sh  process_bm_log.sh  setup.sh
ci/: Dockerfile  Jenkinsfile.premerge  deploy.sh  docs.sh  lint_python.py  test.sh
deprecated/: README.md  pom.xml
docker/: Dockerfile  Dockerfile.pip  Dockerfile.python  README.md
docs/: .buildinfo  Makefile  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  spark_rapids_ml.common.html  spark_rapids_ml.html
docs/_sources/: index.rst.txt
docs/site/: FAQ.md  _config.yml  compatibility.md  configuration.md  contact.md  index.md  performance.md  security.md  spark_connect.md
docs/source/: conf.py  index.rst  spark_rapids_ml.rst  sparkcuml.cluster.rst  sparkcuml.common.rst  sparkcuml.decomposition.rst  sparkcuml.linear_model.rst  sparkcuml.rst
java/: README.md  pom.xml  rapids-plugin-demo.py  run-connect.sh  run.sh
jvm/: README.md  buf-gen.sh  pom.xml
jvm/native/: CMakeLists.txt
native/: CMakeLists.txt
native/src/: CMakeLists.txt  ml_utils.cu  ml_utils.hpp  rapidsmlJni.cpp  rapidsmlJniRemain.cu  rapidsml_jni.cpp  rapidsml_jni.cu  rapidsml_jni.hpp
native/src/utils/: nvtx3.hpp
notebooks/: README.md  approx-nearest-neighbors.ipynb  cv-rf-regressor.ipynb  dbscan.ipynb  kmeans-no-import-change.ipynb  kmeans.ipynb  knn.ipynb  linear-regression.ipynb  logistic-regression.ipynb  pca.ipynb  random-forest-classification.ipynb  random-forest-regression.ipynb  spark-compat.ipynb  spark-cuml-kmeans-demo.ipynb  spark-cuml-pca-demo.ipynb  test-sparkcuml.ipynb  umap.ipynb  umap_RH0516.ipynb  umap_RH0610_gcpDocumentAI.ipynb
notebooks/aws-emr/: README.md  init-bootstrap-action-no-import.sh  init-bootstrap-action.sh  init-configurations.json
notebooks/databricks/: README.md  init-pip-cuda-11.0.sh  init-pip-cuda-11.8-no-import.sh  init-pip-cuda-11.8.sh  init-pip-cuda-12.0.sh  init-pip-cuda-12.sh
notebooks/dataproc/: README.md  spark_rapids_ml.sh  spark_rapids_ml_no_import.sh
python/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run_benchmark.sh  run_plugin_test.sh  run_test.sh  setup.cfg  test_no_import_change.py
python/benchmark/: README.md  benchmark_gen_data.py  benchmark_runner.py  conftest.py  gen_data.py  gen_data_distributed.py  test_gen_data.py
python/benchmark/aws-emr/: README.md  cpu-init-configurations.json  run_benchmark.sh  setup.sh  start_cluster.sh
python/benchmark/benchmark/: base.py  bench_approximate_nearest_neighbors.py  bench_dbscan.py  bench_kmeans.py  bench_linear_regression.py  bench_logistic_regression.py  bench_nearest_neighbors.py  bench_pca.py  bench_random_forest.py  bench_umap.py  utils.py  utils_knn.py
python/benchmark/databricks/: README.md  benchmark_utils.sh  cpu_cluster_spec.sh  gpu_cluster_spec.sh  gpu_etl_cluster_spec.sh  init-cpu.sh  init-pip-cuda-11.8.sh  init-pip-cuda-12.0.sh  init-pip-cuda-12.sh  process_bm_log.sh  run_benchmark.sh  setup.sh
python/benchmark/dataproc/: README.md  init_benchmark.sh  run_benchmark.sh  setup.sh  spark-rapids.sh  start_cluster.sh
python/src/spark_rapids_ml/: __init__.py  __main__.py  classification.py  clustering.py  connect_plugin.py  core.py  dbscan.py  feature.py  install.py  knn.py  new.py  numpy_allocator.py  params.py  pipeline.py  pyspark_rapids.py  regression.py  spark_rapids_submit.py  tree.py  tuning.py  umap.py  utils.py
python/src/spark_rapids_ml/common/: cuml_context.py  rmm_cupy.py
python/src/spark_rapids_ml/metrics/: MulticlassMetrics.py  RegressionMetrics.py  __init__.py  utils.py
python/src/spark_rapids_ml/proto/: __init__.py  relations_pb2.py  relations_pb2.pyi
python/tests/: conftest.py  discover_gpu.sh  sparksession.py  test_approximate_nearest_neighbors.py  test_benchmark.py  test_common_estimator.py  test_dbscan.py  test_gen_data.py  test_kmeans.py  test_linear_model.py  test_logistic_regression.py  test_metrics.py  test_nearest_neighbors.py  test_pca.py  test_pipeline.py  test_random_forest.py  test_tuning.py  test_ucx.py  test_umap.py  test_utils.py  utils.py
python/tests_large/: __init__.py  conftest.py  test_large_kmeans.py  test_large_logistic_regression.py  test_logistic_regression.py
python/tests_no_import_change/: test_no_import_change.py
python/tests_with_etl_accelerator/: conftest.py  cpu.txt  gpu.txt  test_vector_assembler.py
sparkcuml/: core.py  utils.py
sparkcuml/cluster/: __init__.py  kmeans.py
sparkcuml/common/: __init__.py  cuml_context.py  nccl.py
sparkcuml/decomposition/: __init__.py  pca.py
tests/: conftest.py  test_common_estimator.py  test_kmeans.py  test_linear_model.py  test_nearest_neighbors.py  test_pca.py  test_random_forest.py  test_ucx.py  test_utils.py  utils.py
(+178 files in other folders)
