[project]
name = "spark-rapids-ml"
version = "24.10.0"
authors = [
  { name="Jinfeng Li", email="jinfeng@nvidia.com" },
  { name="Bobby Wang", email="bobwang@nvidia.com" },
  { name="Erik Ordentlich", email="eordentlich@nvidia.com" },
  { name="Lee Yang", email="leey@nvidia.com" }
]
description = "Apache Spark integration with RAPIDS and cuML"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA :: 11",
    "Environment :: GPU :: NVIDIA CUDA :: 11.4",
    "Environment :: GPU :: NVIDIA CUDA :: 11.5",
    "Environment :: GPU :: NVIDIA CUDA :: 11.6",
    "Environment :: GPU :: NVIDIA CUDA :: 11.7",
    "Environment :: GPU :: NVIDIA CUDA :: 11.8",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 12.0",
    "Environment :: GPU :: NVIDIA CUDA :: 12.1",
    "Environment :: GPU :: NVIDIA CUDA :: 12.2",
    "Environment :: GPU :: NVIDIA CUDA :: 12.3",
    "Environment :: GPU :: NVIDIA CUDA :: 12.4",
    "Environment :: GPU :: NVIDIA CUDA :: 12.5",
]

[project.scripts]
spark-rapids-submit = "spark_rapids_ml.spark_rapids_submit:main_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
